
Slick 7.x-2.0-dev, 2016-12-09
-----------------------------
- Fixed for coding standards.
- Backported FOUC fix.

Slick 7.x-2.0-dev, 2016-12-01
-----------------------------
- Added lazyLoad anticipated option.

Slick 7.x-2.0-dev, 2016-11-15
-----------------------------
- Backported temp fix for when total <= slidesToShow.

Slick 7.x-2.0-dev, 2016-11-10
-----------------------------
- #2811703 by GeduR: Remove unused $slick_options variable SlickUi.class.php.
- Optimized slick Grid, and made it re-usable for non-list items.
- Fixed for Views preview with adminimal-theme and slick Grid.
- Fixed for broken grid display CSS being overridden by Seven theme.
- Removed useless/unwanted extra nested slick__slide wrapper for grid items.
- A couple of cleanups.

Slick 7.x-2.0-dev, 2016-09-06
-----------------------------
- Changed RTL placement from content_attributes to attributes to allow
  correcting arrow placement which is placed outside slider.
- Allowed a few reasonable HTML tags within slide title.

Slick 7.x-2.0-dev, 2016-08-03
-----------------------------
- #2766399 by nmalinoski: CSS affects ALL images, not just Slick images.
- Removed unsed $media_widget.
- Added support for data-src iframe lazy.
- Fixed for regression with classes_array and attributes_array.

Slick 7.x-2.0-dev, 2016-07-14
-----------------------------
- #2764893 by PhilY: Error message when using Drupal 7.50.
- Fixed for edge case with EntityMalformedException: Missing bundle property.
- Fixed for broken unslick with the new unslick approach when caption and image
  are both present.

Slick 7.x-2.0-dev, 2016-06-20
-----------------------------
- Added lightbox caption option.

Slick 7.x-2.0-dev, 2016-06-19
-----------------------------
- Re-used form-elements for Slick fields and Slick views.
- Backported thumbnail_effect option as a replacement for thumbnail_hover.
- Allowed Slick to run at least the lazyload on an unslick.
- Fixed for unslick images.

Slick 7.x-2.0-dev, 2016-06-16