@@ -405,6 +405,21 @@ Leave empty to disable caching, or if traffics are mostly anonymous.
 [2] https://www.drupal.org/node/2463305#comment-10850288
 
 
+QUICK PERFORMANCE TIPS
+--------------------------------------------------------------------------------
+- Use lazyLoad "ondemand" / "anticipated" for tons of images, not "progressive".
+  Unless within an ajaxified lightbox.
+- Tick "Optimized" option on the top right of Slick optionset edit page.
+- Use image style with regular sizes containing effect "crop" in the name. This
+  way all images will inherit dimensions calculated once.
+- Disable core library "slick-theme.css" as it contains font "slick" which
+  may not be in use when using own icon font at:
+  /admin/config/media/slick/ui
+- Use Blazy multi-serving images, Responsive image, or Picture, accordingly.
+- Uninstall Slick UI at production.
+- Enable Drupal cache, and CSS/ JS assets aggregation.
+
+
 HOW CAN YOU HELP?
 --------------------------------------------------------------------------------
 Please consider helping in the issue queue, provide improvement, or helping with
